# rust-socket

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/client/: main.rs
src/server/: main.rs
